2016-03-21  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/kernel-features.h (__ASSUME_SIGNALFD4):
	Remove macro.
	* sysdeps/unix/sysv/linux/signalfd.c: Do not include
	<kernel-features.h>.
	(signalfd) [__NR_signalfd4]: Make code unconditional.
	(signalfd) [!__ASSUME_SIGNALFD4]: Remove conditional code.

2016-03-21  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/unix/sysv/linux/spawni.c (__spawnix): Fix implict checks
	style.

2016-03-21  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/cancellation.S
	(__pthread_enable_asynccancel): Use JUMPTARGET to call
	__pthread_unwind.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S
	(__condvar_cleanup2): Use JUMPTARGET to call _Unwind_Resume.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S
	(__condvar_cleanup1): Likewise.

2016-03-21  Dylan Alex Simon  <dylan-sourceware@dylex.net>

	[BZ #19822]
	* math/Makefile ($(inst_libdir)/libm.so): Write output to $@.tmp and
	move it to the final $@ location.

2016-03-20  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/unix/sysv/linux/spawni.c (__spawnix): Fix invalid memory
	access where posix_spawn success and pid argument is null.
	* posix/tst-spawn.c (do_test): Add posix_spawn null pid argument for
	success case.

2016-03-20  Samuel Thibault  <samuel.thibault@ens-lyon.org>:

	* sysdeps/mach/hurd/i386/c++-types.data: New file.

	* sysdeps/mach/hurd/libc-lock.h (_IO_lock_inexpensive): Define to 1.

	* sysdeps/generic/dl-fcntl.h: New file, adds attribute_hidden to __open
	and __fcntl.
	* sysdeps/mach/hurd/dl-fcntl.h: New file, adds attribute_hidden to
	__fcntl only.
	* include/fcntl.h [IS_IN (rtld)]: Include <dl-fcntl.h> instead of
	adding attribute_hidden to __open and __fcntl.

	* sysdeps/mach/hurd/Makefile ($(common-objpfx)errnos.d): Strip
	"-include $(common-objpfx)libc-modules.h" from CPPFLAGS, and do not
	depend on libc-modules.h,